packages/esm-patient-vitals-app/src/vitals-and-biometrics-header/vitals-header.scss
@use '@carbon/colors';
@use '@carbon/layout';
@use '@carbon/type';
@use '@openmrs/esm-styleguide/src/vars' as *;

// Designs: https://app.zeplin.io/project/60d59321e8100b0324762e05/screen/648c44d9d4052c613e7f23da

.container {
  padding: layout.$spacing-03 layout.$spacing-05 layout.$spacing-05;
  border-bottom: 1px solid $ui-03;
}

.vitalsHeader {
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: layout.$spacing-07;
  outline: none;
  pointer-events: visibleFill;
}

.emptyStateVitalsHeader {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 layout.$spacing-05;
  min-height: layout.$spacing-09;
  outline: none;
  pointer-events: visibleFill;
  border-bottom: 1px solid $ui-03;
  background-color: $openmrs-background-grey;

  .container {
    border-bottom: none;
    padding: 0;
  }

  .bodyText {
    margin-left: layout.$spacing-03;
  }
}

.headerItems {
  display: flex;
  align-items: baseline;
  flex-flow: row wrap;
  gap: layout.$spacing-02 layout.$spacing-04;
}

.heading {
  @include type.type-style('heading-compact-02');
  color: $ui-05 !important;
}

.rowContainer {
  width: 100%;
  container-type: inline-size;
  container-name: vitals-header-row-container;
}

.row {
  align-items: center;
  width: 100%;
  // Wide viewport: 8 columns (default)
  display: grid;
  grid-template-columns: repeat(8, minmax(0, 1fr));
  column-gap: layout.$spacing-05;
}

// Narrow viewport: 4 columns (when workspace is opened or container is reduced)
@container vitals-header-row-container (max-width: 80rem) {
  .row {
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }
}

.loading {
  display: flex;
  background-color: $openmrs-background-grey;
  justify-content: center;
  min-height: layout.$spacing-09;
}

.tag {
  margin-right: 0;
}

.overdueIndicator {
  display: flex;
  align-items: center;
  min-inline-size: max-content;
  color: colors.$red-70;

  svg {
    margin-right: layout.$spacing-02;
  }
}

.buttonContainer {
  display: flex;
  align-items: center;
  justify-content: right;
}

.recordVitalsButton {
  @include type.type-style('body-compact-01');

  &:not([disabled]) svg {
    fill: $color-blue-60-2;
  }
}

.recordVitalsIconButton {
  display: flex;
  align-items: baseline;
  justify-content: center;
  cursor: pointer;
  margin-left: layout.$spacing-03;
}

.bodyText {
  @include type.type-style('label-01');
  color: $text-02;
}

.link {
  @extend .bodyText;
  text-decoration-line: none;
  color: $interactive-01;
}

.referenceRangeToggletip {
  align-self: center;
}

.referenceRangeButton {
  display: flex;
  align-items: center;
  padding: 0;
  border: none;
  background: transparent;
  cursor: pointer;
  color: $text-02;

  &:hover {
    color: $interactive-01;
  }
}

.referenceRangeContent {
  min-width: 14rem;
  padding-inline: layout.$spacing-02;
}

.referenceRangeHeading {
  @include type.type-style('heading-compact-01');
  margin-bottom: layout.$spacing-03;
}

.referenceRangeEntries {
  display: flex;
  flex-direction: column;
  gap: layout.$spacing-02;
}

.referenceRangeRow {
  display: grid;
  grid-template-columns: minmax(0, 1fr) max-content;
  align-items: start;
  column-gap: layout.$spacing-03;
}

.referenceRangeLabel {
  @include type.type-style('body-compact-01');
  color: colors.$gray-30;
  white-space: normal;
}

.referenceRangeValue {
  @include type.type-style('body-compact-01');
  font-weight: 600;
  white-space: nowrap;
  text-align: right;
}

// Overriding styles for RTL support
html[dir='rtl'] {
  .container {
    & > span:nth-child(2) {
      margin-right: layout.$spacing-03;
    }
  }
}

